k8s-devel/forgejo-runner.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo-runner
spec:
  selector:
    matchLabels:
      app: forgejo-runner
  template:
    metadata:
      name: forgejo-runner
      labels:
        app: forgejo-runner
    spec:
      nodeName: k8s-1
      securityContext:
        fsGroup: 1000
      hostUsers: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-runner
        - name: config
          configMap:
            name: forgejo-runner
        - name: containers
          emptyDir: {}
      hostAliases:
        - hostnames:
            - host.containers.internal
          ip: 127.0.0.1
      containers:
        - name: forgejo-runner
          image: code.forgejo.org/forgejo/runner:12.7.0
          command: ['forgejo-runner', 'daemon', '-c', '/etc/forgejo-runner/config.yaml']
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /etc/forgejo-runner/config.yaml
              subPath: config.yaml
        - name: podman
          image: quay.io/podman/stable:v5.7.1
          command: ['bash', '-c', 'rm /etc/containers/containers.conf && rm /home/podman/.config/containers/containers.conf && sudo -u podman -- podman system service -t0 tcp://127.0.0.1:8888']
          securityContext:
            procMount: Unmasked
            seccompProfile:
              type: Unconfined
          volumeMounts:
            - name: containers
              mountPath: /home/podman/.local/share/containers
          resources:
            limits:
              squat.ai/tun: 1
