k8s-devel/code-server-sandbox.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: code-server-sandbox
spec:
  selector:
    matchLabels:
      app: code-server-sandbox
  template:
    metadata:
      name: code-server-sandbox
      labels:
        app: code-server-sandbox
    spec:
      nodeName: k8s-1
      hostUsers: false
      volumes:
        - name: config
          configMap:
            name: code-server
        - name: data
          persistentVolumeClaim:
            claimName: code-server-sandbox
        - name: nix
          persistentVolumeClaim:
            claimName: code-server-sandbox-nix
      containers:
        - name: code-server-sandbox
          image: git.strypsteen.com/infra/code-server
          securityContext:
            procMount: Unmasked
            seccompProfile:
              type: Unconfined
          volumeMounts:
            - name: config
              mountPath: /home/coder/.local/share/code-server/Machine/settings.json
              subPath: settings.json
            - name: data
              mountPath: /home/coder/.local/share/code-server
              subPath: code-server
            - name: data
              mountPath: /home/coder/.ssh
              subPath: ssh
            - name: data
              mountPath: /home/coder/projects
              subPath: projects
            - name: nix
              mountPath: /nix
          resources:
            limits:
              devic.es/fuse: 1
              devic.es/kvm: 1
              devic.es/tun: 1
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-sandbox
spec:
  selector:
    app: code-server-sandbox
  ports:
    - port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server-sandbox
spec:
  parentRefs:
    - namespace: apps
      name: envoy-internal
  hostnames:
    - code-sandbox.strypsteen.com
    - "*.code-sandbox.strypsteen.com"
  rules:
    - backendRefs:
        - name: code-server-sandbox
          port: 8080
