k8s-devel/code-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      name: code-server
      labels:
        app: code-server
    spec:
      nodeName: k8s-1
      hostUsers: false
      volumes:
        - name: config
          configMap:
            name: code-server
        - name: data
          persistentVolumeClaim:
            claimName: code-server
        - name: nix
          persistentVolumeClaim:
            claimName: code-server-nix
      containers:
        - name: code-server
          image: git.strypsteen.com/infra/code-server
          securityContext:
            procMount: Unmasked
            seccompProfile:
              type: Unconfined
          volumeMounts:
            - name: config
              mountPath: /home/coder/.local/share/code-server/Machine/settings.json
              subPath: settings.json
            - name: data
              mountPath: /home/coder/.local/share/code-server
              subPath: code-server
            - name: data
              mountPath: /home/coder/.ssh
              subPath: ssh
            - name: data
              mountPath: /home/coder/projects
              subPath: projects
            - name: nix
              mountPath: /nix
          resources:
            limits:
              devic.es/kvm: 1
              devic.es/tun: 1
      imagePullSecrets:
        - name: git-strypsteen-com
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  selector:
    app: code-server
  ports:
    - name: code-server
      port: 9000
    - name: atlas-api
      port: 8612
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
spec:
  parentRefs:
    - namespace: apps
      name: envoy-internal
  hostnames:
    - code.strypsteen.com
    - "*.code.strypsteen.com"
  rules:
    - backendRefs:
        - name: code-server
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: code-server
spec:
  podSelector:
    matchLabels:
      app: code-server
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8612
